# otus-7

./: .clang-tidy  .gitignore  CMakeLists.txt
.github/workflows/: build.yml
examples/: CMakeLists.txt  adapter.cpp
examples/decorator/: CMakeLists.txt  decorator.h  main.cpp  processor.h  timeit.h  traceit.h
src/: block_reader.hpp  block_writer.hpp  main.cpp
